 package UserInterface

import scala.swing._

object GUI extends SimpleSwingApplication{
  def top : MainFrame = new UI

}